estructura genearl de la app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-Hola mundo
+<div class="row mt-3">
+  <div class="col-3">
+    <!-- Sidebar -->
+    sidebar
+  </div>
+  <div class="col">
+    <!-- Pages -->
+    router
+  </div>
+</div>
