--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-3">
   <div class="col-3">
     <!-- Sidebar -->
-    sidebar
+    <shared-sidebar></shared-sidebar>
   </div>
   <div class="col">
     <!-- Pages -->
