--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -9,6 +9,6 @@
 <div class="row">
   <div class="col">
     <hr>
-    Tabla de resultados
+    <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
