--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -3,7 +3,8 @@
 <div class="row">
   <div class="col">
     <!-- SearchBox -->
-    <shared-search-box (onValue)="searchByCountry($event)" placeholder="Buscar por país"></shared-search-box>
+    <!-- <shared-search-box (onValue)="searchByCountry($event)" placeholder="Buscar por país"></shared-search-box> -->
+    <shared-search-box (onDebounce)="searchByCountry($event)" placeholder="Buscar por capital"></shared-search-box>
   </div>
 </div>
 <div class="row">
