--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -3,7 +3,8 @@
 <div class="row">
   <div class="col">
     <!-- SearchBox -->
-    <shared-search-box (onValue)="searchByRegion($event)" placeholder="Buscar por región"></shared-search-box>
+    <!-- <shared-search-box (onValue)="searchByRegion($event)" placeholder="Buscar por región"></shared-search-box> -->
+    <shared-search-box (onDebounce)="searchByRegion($event)" placeholder="Buscar por capital"></shared-search-box>
   </div>
 </div>
 <div class="row">
