--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,2 +1,4 @@
-<input type="text" [placeholder]="placeholder" class="form-control" #txtSearchInput
-  (keyup.enter)="emitValue( txtSearchInput.value )">
+<!-- <input type="text" [placeholder]="placeholder" class="form-control" #txtSearchInput
+  (keyup.enter)="emitValue( txtSearchInput.value )"> -->
+<input (keyup)="onKeypress( txtSearchInput.value )" [placeholder]="placeholder" #txtSearchInput class="form-control"
+  type="text">
