--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,10 +1,14 @@
 <h2>Por región</h2>
 <hr>
 <div class="row">
-  <div class="col">
+  <div id="region-list" class="col text-center py-2">
     <!-- SearchBox -->
-    <!-- <shared-search-box (onValue)="searchByRegion($event)" placeholder="Buscar por región"></shared-search-box> -->
-    <shared-search-box (onDebounce)="searchByRegion($event)" placeholder="Buscar por capital"></shared-search-box>
+    <button *ngFor="let region of regions"
+      [ngClass]=" {'btn-outline-primary border-black text-uppercase':selectedRegion === region} "
+      class="btn rounded-1 mx-2 bg-light" (click)="searchByRegion(region)">
+      {{ region }}
+    </button>
+
   </div>
 </div>
 <div class="row">
