--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,7 +4,8 @@
   <div class="col">
     <!-- SearchBox -->
     <!-- <shared-search-box (onValue)="searchByCapital($event)" placeholder="Buscar por capital"></shared-search-box> -->
-    <shared-search-box (onDebounce)="searchByCapital($event)" placeholder="Buscar por capital"></shared-search-box>
+    <shared-search-box [initialValue]="initialValue" (onDebounce)="searchByCapital($event)"
+      placeholder="Buscar por capital"></shared-search-box>
   </div>
 </div>
 <div class="row">
