--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -4,8 +4,8 @@
   <div id="region-list" class="col text-center py-2 border rounded border-dark-subtle">
     <!-- SearchBox -->
     <button *ngFor="let region of regions"
-      [ngClass]=" {'btn-outline-primary border-black text-uppercase bg-blue':selectedRegion === region} "
-      class="btn rounded-1 mx-2 btn-secondary" (click)="searchByRegion(region)">
+      [ngClass]=" {'border-black text-uppercase bg-ligth':selectedRegion === region} "
+      class="btn mx-2 border border-black rounded" (click)="searchByRegion(region)">
       {{ region }}
     </button>
 
